--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Aman Pandagre,Muskan Mishra, Karan Sahu,Kapil Prajapati",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
